Feat: 리덕스 적용

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <h3>Create_web_components</h3>
     <div>
       <a href="/example1">example1</a>
     </div>
@@ -28,6 +29,19 @@
     </div>
     <div>
       <a href="/example8">example8</a>
+    </div>
+
+    <h3>Create_status_management</h3>
+    <div>
+      <a href="/example9">01-pubsub</a>
+    </div>
+    <div>
+      <a href="/example8">example8</a>
+    </div>
+
+    <h3>redux_pratice</h3>
+    <div>
+      <a href="/redux_pratice">redux_pratice</a>
     </div>
   </body>
 </html>
